Aggiunte nuove funzionalità: - Visualizza tutte le segnalazioni di un utente. - Visualizza nel dettaglio una segnalazione appartenente all'utente. - Aggiunta di una colonna titolo alla tabella segnalazioni. - Aggiunti altri file che non avevo aggiunto.
